--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,19 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Severin Rapp
+email: severn.rapp@wu.ac.at
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  PhD candidate at the Vienna University of Economics and Business
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: severin_rapp
+github_username:  severin-rapp
+linkedin_username: severin-rapp
 
 # Build settings
-theme: minima
+# academic
+remote_theme: gaalcaras/academic
 plugins:
   - jekyll-feed
 
