--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Severin Rapp
-email: severn.rapp@wu.ac.at
+email: severin-rapp@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
   PhD candidate at the Vienna University of Economics and Business
 baseurl: "" # the subpath of your site, e.g. /blog
